KVH/mykvh/Email-to-anything/objects/Draft_Email__c.object
<CustomObject>
    <description>Draft Email</description>
    <fields>
        <fullName>Additional_To_Address__c</fullName>
        <description>Additional to address</description>
        <label>Additional To Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Author</description>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Draft_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCC_Address__c</fullName>
        <description>BCC addresses</description>
        <label>BCC Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body</description>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <description>CC addresses</description>
        <label>CC Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <description>From addresses</description>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <description>Importance</description>
        <label>Importance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal use - used for passing parameters to draft selector page</description>
        <label>Internal Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Html__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is html draft email</description>
        <label>Html</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Keep</description>
        <label>Keep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <description>To address</description>
        <label>To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Draft Email</label>
    <nameField>
        <label>Draft Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Draft Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>